@@ -5,6 +5,7 @@
   [no-id]  EEPROM handling not working for AT90CAN128 ATmega48 ATmega88
 	   ATmega165 ATmega168 ATmega169 ATmega325 ATmega3250 ATmega645
 	   ATmega6450
+  [#12646] strtod returns error for valid input (patch#4137)
   [#13341] Remove ADHSM bit from header files.
 
 * Other improvements:
